--- a/app/src/main/res/layout/activity_video_detail.xml
+++ b/app/src/main/res/layout/activity_video_detail.xml
@@ -9,7 +9,7 @@
 
     <include layout="@layout/toolbar"/>
 
-    <WebView
+    <com.ezvizuikit.open.EZUIPlayer
         android:id="@+id/web_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
