--- a/app/src/main/res/layout/activity_video_detail.xml
+++ b/app/src/main/res/layout/activity_video_detail.xml
@@ -13,9 +13,8 @@
         android:id="@+id/web_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.1" />
+        android:background="#FF000000"
+      />
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -31,6 +30,7 @@
                 android:padding="@dimen/x10"
                 android:background="@drawable/text_circle_back"
                 android:text="慢速"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/tv_normal"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -40,11 +40,11 @@
                 android:id="@+id/tv_normal"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/x40"
-                android:layout_marginTop="@dimen/dp_10"
                 android:gravity="center"
                 android:padding="@dimen/x10"
                 android:background="@drawable/text_circle_back"
                 android:text="正常"
+                app:layout_constraintTop_toTopOf="@id/tv_slow"
                 app:layout_constraintEnd_toStartOf="@+id/tv_fast"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/tv_slow"
@@ -54,7 +54,7 @@
                 android:id="@+id/tv_fast"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/x40"
-                android:layout_marginTop="@dimen/dp_10"
+                app:layout_constraintTop_toTopOf="@id/tv_slow"
                 android:gravity="center"
                 android:padding="@dimen/x10"
                 android:background="@drawable/text_circle_back"
